Added basic server functionality

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
     <title>MMO</title>
-    <script data-main="js/home" src="js/lib/require.js"></script>
+    <script src="socket.io/socket.io.js"></script>
+    <script data-main="/js/home" src="js/lib/require.js"></script>
+
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 
